<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/sit_name_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/untitled"
                android:inputType="text|textCapSentences"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/conditions_title_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/conditions"
            android:textColor="#ccc"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/conditions_part"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/no_condition"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_conditions"
                android:textColor="#ccc"
                android:textSize="14sp"
                android:textStyle="italic" />

            <ListView
                android:id="@+id/conditions_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbars="none"
                android:scrollingCache="false" />

            <Button
                android:id="@+id/add_condition_button"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:onClick="AddNewCondition"
                android:text="@string/add_condition" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="#ccc"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/no_setting"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_settings"
                android:textColor="#ccc"
                android:textSize="14sp"
                android:textStyle="italic" />

            <ListView
                android:id="@+id/settings_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbars="none"
                android:scrollingCache="false" />

            <Button
                android:id="@+id/add_setting_button"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:onClick="AddNewSetting"
                android:text="@string/add_setting" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>